After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654914 - empathy-debugger crashed with SIGSEGV in g_type_check_instance()
empathy-debugger crashed with SIGSEGV in g_type_check_instance()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.1.x
Other Linux
: Normal critical
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-07-19 16:39 UTC by Pedro Villavicencio
Modified: 2011-08-01 22:40 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
possible fix? (901 bytes, patch)
2011-07-21 03:32 UTC, Danielle Madeley
accepted-commit_now Details | Review

Description Pedro Villavicencio 2011-07-19 16:39:07 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/812323

"i was trying to debug an empathy error with the debugging window, then i've closed it and it crashed."


".

Thread 1 (Thread 3817)

  • #0 g_type_check_instance
    at /build/buildd/glib2.0-2.29.10/./gobject/gtype.c line 4057
  • #1 g_signal_handlers_disconnect_matched
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 2675
  • #2 tp_proxy_signal_connection_disconnect_dbus_glib
    at proxy-signals.c line 85
  • #3 debug_window_dispose
    at empathy-debug-window.c line 1711
  • #4 g_object_run_dispose
    at /build/buildd/glib2.0-2.29.10/./gobject/gobject.c line 945
  • #5 gtk_widget_destroy
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkwidget.c line 3816
  • #6 gtk_main_do_event
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmain.c line 1792
  • #7 _gdk_event_emit
    at /build/buildd/gtk+3.0-3.1.8/./gdk/gdkevents.c line 71
  • #8 gdk_event_source_dispatch
    at /build/buildd/gtk+3.0-3.1.8/./gdk/x11/gdkeventsource.c line 360
  • #9 g_main_dispatch
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 2473
  • #10 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3046
  • #11 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3124
  • #12 g_main_loop_run
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3332
  • #13 gtk_main
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmain.c line 1362
  • #14 gtk_application_run_mainloop
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkapplication.c line 112
  • #15 g_application_run
    at /build/buildd/glib2.0-2.29.10/./gio/gapplication.c line 1325
  • #16 main
    at empathy-debugger.c line 73

Comment 1 Danielle Madeley 2011-07-21 03:32:30 UTC
Created attachment 192350 [details] [review]
possible fix?

I can't reproduce this. I wonder if the problem is to do with releasing the signal after we invalidate the proxy. In which case this may be the fix.
Comment 2 Guillaume Desmottes 2011-08-01 10:27:47 UTC
Review of attachment 192350 [details] [review]:

Looks good.
Comment 3 Danielle Madeley 2011-08-01 22:40:49 UTC
Committed. Reopen this bug if you can still reproduce the crash :)