Move signal disconnection earlier to hopefully fix SEGV

I can't actually reproduce this, but this is possibly the fix.

(Hopefully) Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=654914